--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "jsdom": "^26.1.0",
     "vite": "^5.0.0",
     "vitest": "^3.2.4"
   }
